# CPPAI

./: .gitignore  CMakeLists.txt  CompileLLama.sh  prompt.txt  tokenizer template.txt
articles/: amd.txt  nvidia.txt
src/: Articles.cpp  Articles.hpp  FuncLLM copy.hpp  FuncLLM.hpp  LLM.cpp  LLM.hpp  main.cpp
src/Formats/: ChatML.cpp  ChatML.hpp  Phi3.cpp  Phi3.hpp
summaries/: amd.txt  nvidia.txt
